# pg-image-processing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: AddGLFW.cmake  AddLibWebP.cmake  AddSTB.cmake  TemplateShader.cmake
lib/: CMakeLists.txt
lib/filter/: CMakeLists.txt
lib/filter/include/self/: filter.hpp
lib/filter/src/: filter.cpp
lib/input/: CMakeLists.txt
lib/input/include/self/: input.hpp
lib/input/src/: input.cpp
lib/log/: CMakeLists.txt
lib/log/include/self/: log.hpp
lib/log/src/: log.cpp
lib/screen/: CMakeLists.txt
lib/screen/include/self/: main_screen.hpp  screen.hpp
lib/screen/src/: main_screen.cpp
lib/shader/: CMakeLists.txt
lib/shader/include/self/: shader.hpp
lib/shader/src/: shader.cpp
lib/texture/: CMakeLists.txt
lib/texture/include/self/: texture.hpp
lib/texture/src/: texture.cpp
lib/window/: CMakeLists.txt
lib/window/include/self/: window.hpp
lib/window/src/: window.cpp
shaders/: main.frag  main.vert
src/: CMakeLists.txt  main.cpp
templates/: shaderSource.h.in
